--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -1,6 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/lyuUno"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".vistas.menuPrincipal" />
+    android:background="#F1CECE"
+    tools:context=".vistas.menuPrincipal">
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="278dp"
+        android:layout_height="99dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="48dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/logo_uno" />
+
+    <ImageButton
+        android:id="@+id/btnDos"
+        android:layout_width="144dp"
+        android:layout_height="132dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="64dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/img_tres" />
+
+    <ImageButton
+        android:id="@+id/btnTres"
+        android:layout_width="146dp"
+        android:layout_height="130dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="64dp"
+        app:layout_constraintStart_toEndOf="@+id/btnDos"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/img_cuatro" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
