--- a/app/src/main/res/layout/activity_domicilios_activos.xml
+++ b/app/src/main/res/layout/activity_domicilios_activos.xml
@@ -46,7 +46,8 @@
         android:layout_width="83dp"
         android:layout_height="89dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="12dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/img_logout_peq"
-        tools:layout_editor_absoluteY="626dp" />
+        app:srcCompat="@drawable/img_logout_peq" />
 </androidx.constraintlayout.widget.ConstraintLayout>
