--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -72,7 +72,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/btnSeis"
         android:layout_width="110dp"
         android:layout_height="100dp"
         android:layout_marginEnd="24dp"
