--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -59,6 +59,8 @@
         android:layout_marginEnd="148dp"
         android:text="En Curso"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/btnDos"
         app:layout_constraintTop_toBottomOf="@+id/btnTres" />
 
     <TextView
@@ -73,12 +75,12 @@
 
     <ImageButton
         android:id="@+id/btnSeis"
-        android:layout_width="110dp"
-        android:layout_height="100dp"
+        android:layout_width="85dp"
+        android:layout_height="71dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="35dp"
+        android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/logout" />
+        app:srcCompat="@drawable/img_logout_peq" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
