--- a/app/src/main/res/layout/activity_domicilios_activos.xml
+++ b/app/src/main/res/layout/activity_domicilios_activos.xml
@@ -36,13 +36,13 @@
         android:layout_height="86dp"
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
+        app:layout_constraintEnd_toStartOf="@+id/btnOcho"
         app:layout_constraintHorizontal_bias="0.75"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/logo_uno" />
 
     <ImageButton
-        android:id="@+id/imageButton2"
+        android:id="@+id/btnOcho"
         android:layout_width="83dp"
         android:layout_height="89dp"
         android:layout_marginEnd="16dp"
