--- a/app/src/main/res/layout/activity_domicilios_disponibles.xml
+++ b/app/src/main/res/layout/activity_domicilios_disponibles.xml
@@ -37,13 +37,13 @@
         android:layout_height="82dp"
         android:layout_marginBottom="28dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/imageButton5"
+        app:layout_constraintEnd_toStartOf="@+id/btnSiete"
         app:layout_constraintHorizontal_bias="0.47"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/logo_uno" />
 
     <ImageButton
-        android:id="@+id/imageButton5"
+        android:id="@+id/btnSiete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
