--- a/app/src/main/res/layout/activity_domicilios_disponibles.xml
+++ b/app/src/main/res/layout/activity_domicilios_disponibles.xml
@@ -52,4 +52,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/img_logout_peq" />
 
+
+    <ListView
+        android:id="@+id/listViewUno"
+        android:layout_width="347dp"
+        android:layout_height="487dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/divider"
+        app:layout_constraintVertical_bias="0.454" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
