--- a/app/src/main/res/layout/activity_domicilios_disponibles.xml
+++ b/app/src/main/res/layout/activity_domicilios_disponibles.xml
@@ -24,12 +24,12 @@
         android:id="@+id/divider"
         android:layout_width="324dp"
         android:layout_height="3dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="116dp"
         android:background="?android:attr/listDivider"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.574"
+        app:layout_constraintHorizontal_bias="0.528"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewCuatro" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -55,14 +55,13 @@
 
     <ListView
         android:id="@+id/listViewUno"
-        android:layout_width="347dp"
-        android:layout_height="487dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        android:layout_width="336dp"
+        android:layout_height="460dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/divider"
-        app:layout_constraintVertical_bias="0.454" />
+        app:layout_constraintTop_toBottomOf="@+id/divider" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
