--- a/app/src/main/res/layout/row_uno.xml
+++ b/app/src/main/res/layout/row_uno.xml
@@ -5,9 +5,9 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="43dp"
-        android:layout_height="45dp"
+        android:id="@+id/imageViewCuatro"
+        android:layout_width="57dp"
+        android:layout_height="54dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -18,43 +18,42 @@
         android:id="@+id/textViewUno"
         android:layout_width="125dp"
         android:layout_height="21dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
         android:text="Origen:"
-        app:layout_constraintStart_toEndOf="@+id/imageView4"
+        app:layout_constraintStart_toEndOf="@+id/imageViewCuatro"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tvRowDos"
         android:layout_width="124dp"
         android:layout_height="21dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="5dp"
         android:text="Destino:"
-        app:layout_constraintStart_toEndOf="@+id/imageView4"
+        app:layout_constraintStart_toEndOf="@+id/imageViewCuatro"
         app:layout_constraintTop_toBottomOf="@+id/textViewUno" />
 
     <TextView
         android:id="@+id/textViewTres"
-        android:layout_width="144dp"
-        android:layout_height="22dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="125dp"
+        android:layout_height="19dp"
+        android:layout_marginStart="16dp"
+
+        android:layout_marginTop="4dp"
+
         android:text="Estado:"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/textViewUno"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/imageViewCuatro"
+        app:layout_constraintTop_toBottomOf="@+id/tvRowDos" />
 
     <View
         android:id="@+id/divider4"
         android:layout_width="340dp"
         android:layout_height="2dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginTop="5dp"
         android:background="?android:attr/listDivider"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.636"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewTres" />
 </androidx.constraintlayout.widget.ConstraintLayout>
