--- a/app/src/main/res/layout/activity_tomar_domicilio.xml
+++ b/app/src/main/res/layout/activity_tomar_domicilio.xml
@@ -36,6 +36,8 @@
         android:layout_height="40dp"
         android:layout_marginTop="32dp"
         android:text="Origen : "
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,6 +60,8 @@
         android:layout_height="42dp"
         android:layout_marginTop="4dp"
         android:text="Destino : "
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
