--- a/app/src/main/res/layout/activity_domicilios_disponibles.xml
+++ b/app/src/main/res/layout/activity_domicilios_disponibles.xml
@@ -7,16 +7,18 @@
     android:background="#EFEFEF"
     tools:context=".vistas.DomiciliosDisponiblesActivity">
 
+
     <TextView
         android:id="@+id/textViewCuatro"
-        android:layout_width="199dp"
-        android:layout_height="85dp"
+        android:layout_width="294dp"
+        android:layout_height="81dp"
         android:layout_marginTop="16dp"
         android:text="Domicilios\nLibres"
         android:textSize="36sp"
         android:textStyle="bold"
+
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.235"
+        app:layout_constraintHorizontal_bias="0.188"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -24,47 +26,55 @@
         android:id="@+id/divider"
         android:layout_width="324dp"
         android:layout_height="3dp"
-        android:layout_marginTop="116dp"
+
+        android:layout_marginTop="12dp"
+
         android:background="?android:attr/listDivider"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.528"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="344dp"
-        android:layout_height="82dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/imageButton3"
-        app:layout_constraintHorizontal_bias="0.562"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/logo_uno" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewCuatro" />
 
     <ListView
         android:id="@+id/listViewUno"
-        android:layout_width="389dp"
-        android:layout_height="566dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="28dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        android:layout_width="384dp"
+        android:layout_height="496dp"
+
+
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/divider" />
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="290dp"
+        android:layout_height="84dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="12dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/imageButton3"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+
+        app:srcCompat="@drawable/logo_uno" />
+
     <ImageButton
         android:id="@+id/imageButton3"
-        android:layout_width="85dp"
-        android:layout_height="85dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="64dp"
+        android:layout_height="67dp"
+
+        android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
-        android:background="#FFFFFF"
+        android:background="#EFEFEF"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
         app:srcCompat="@drawable/img_logout_peq" />
 
 
