--- a/app/src/main/res/layout/activity_tomar_domicilio.xml
+++ b/app/src/main/res/layout/activity_tomar_domicilio.xml
@@ -7,19 +7,19 @@
     tools:context=".vistas.TomarDomicilioActivity">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnToDoUno"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
         android:backgroundTint="#8BC34A"
         android:text="Tomar"
         app:layout_constraintBottom_toTopOf="@+id/imageView4"
-        app:layout_constraintEnd_toStartOf="@+id/button2"
+        app:layout_constraintEnd_toStartOf="@+id/btnToDoDos"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnToDoDos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
@@ -28,7 +28,7 @@
         app:layout_constraintBottom_toTopOf="@+id/imageView4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/button" />
+        app:layout_constraintStart_toEndOf="@+id/btnToDoUno" />
 
     <TextView
         android:id="@+id/tvToDoOrigen"
