--- a/app/src/main/res/layout/activity_domicilio_activo.xml
+++ b/app/src/main/res/layout/activity_domicilio_activo.xml
@@ -53,111 +53,139 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/txtDoAcDos"
         android:layout_width="331dp"
         android:layout_height="30dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="3dp"
         android:text="Origen : "
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.425"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintTop_toBottomOf="@+id/txtDoAcUno" />
 
     <TextView
-        android:id="@+id/textView5"
-        android:layout_width="191dp"
-        android:layout_height="25dp"
-        android:layout_marginTop="40dp"
-        android:text="Evidencias Origen"
-        app:layout_constraintEnd_toStartOf="@+id/btnDoAcAdduno"
-        app:layout_constraintHorizontal_bias="0.587"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="189dp"
-        android:layout_height="27dp"
-        android:layout_marginTop="16dp"
-        android:text="Evidencias Destino"
-        app:layout_constraintEnd_toStartOf="@+id/btnDoAcAdddos"
-        app:layout_constraintHorizontal_bias="0.56"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnDoAcAdduno" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="331dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="16dp"
+        android:id="@+id/txtDoAcCuatro"
+        android:layout_width="334dp"
+        android:layout_height="29dp"
+        android:layout_marginTop="6dp"
         android:text="Cliente : "
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.425"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
-
-    <ImageButton
-        android:id="@+id/btnDoAcAdddos"
-        android:layout_width="44dp"
-        android:layout_height="42dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="112dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnDoAcAdduno"
-        app:srcCompat="@drawable/img_anadir" />
-
-    <ImageButton
-        android:id="@+id/btnDoAcAdduno"
-        android:layout_width="45dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="112dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:srcCompat="@drawable/img_anadir" />
+        app:layout_constraintTop_toBottomOf="@+id/txtDoAcTres" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/txtDoAcTres"
         android:layout_width="329dp"
         android:layout_height="28dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="3dp"
         android:text="Destino : "
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.414"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/txtDoAcDos" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/txtDoAcUno"
         android:layout_width="328dp"
         android:layout_height="26dp"
         android:layout_marginTop="24dp"
         android:text="Descripcion : "
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.409"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/divider6" />
 
     <TextView
+        android:id="@+id/txtDoAcSeis"
+        android:layout_width="333dp"
+        android:layout_height="23dp"
+
+        android:layout_marginTop="6dp"
+        android:text="Hora : "
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtDoAcCinco" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="132dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="20dp"
+        android:text="Evidencias Origen"
+        app:layout_constraintEnd_toStartOf="@+id/btnDoAcAdduno"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtDoAcSeis" />
+
+    <ImageButton
+        android:id="@+id/btnDoAcAddNote"
+        android:layout_width="59dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="112dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/textView8"
+        app:layout_constraintTop_toBottomOf="@+id/btnDoAcAdddos"
+        app:srcCompat="@drawable/img_add_note" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="135dp"
+        android:layout_height="22dp"
+        android:layout_marginTop="8dp"
+        android:text="Evidencias Destino"
+        app:layout_constraintEnd_toStartOf="@+id/btnDoAcAdddos"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnDoAcAdduno" />
+
+    <ImageButton
+        android:id="@+id/btnDoAcAdduno"
+        android:layout_width="60dp"
+        android:layout_height="57dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="112dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/textView5"
+        app:layout_constraintTop_toBottomOf="@+id/txtDoAcSeis"
+        app:srcCompat="@drawable/img_anadir" />
+
+    <TextView
         android:id="@+id/textView8"
-        android:layout_width="188dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="40dp"
+        android:layout_width="134dp"
+        android:layout_height="20dp"
         android:layout_marginTop="16dp"
         android:text="Añadir Nota"
-        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintEnd_toStartOf="@+id/btnDoAcAddNote"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnDoAcAdddos" />
 
     <ImageButton
-        android:id="@+id/imageButton2"
-        android:layout_width="41dp"
-        android:layout_height="39dp"
-        android:layout_marginTop="16dp"
+        android:id="@+id/btnDoAcAdddos"
+        android:layout_width="59dp"
+        android:layout_height="54dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="112dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnDoAcAdddos"
-        app:srcCompat="@drawable/img_add_note" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/textView6"
+        app:layout_constraintTop_toBottomOf="@+id/btnDoAcAdduno"
+        app:srcCompat="@drawable/img_anadir" />
+
+    <TextView
+        android:id="@+id/txtDoAcCinco"
+        android:layout_width="336dp"
+        android:layout_height="24dp"
+        android:layout_marginTop="6dp"
+        android:text="Fecha  : "
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtDoAcCuatro" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
