--- a/app/src/main/res/layout/activity_domicilios_activos.xml
+++ b/app/src/main/res/layout/activity_domicilios_activos.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".vistas.DomiciliosActivosActivity">
 
     <TextView
@@ -46,6 +47,7 @@
         android:layout_height="89dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="12dp"
+        android:background="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/img_logout_peq" />
