--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -25,6 +25,7 @@
         android:layout_height="132dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="84dp"
+        android:background="#EFEFEF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/img_tres" />
@@ -35,6 +36,7 @@
         android:layout_height="130dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="84dp"
+        android:background="#EFEFEF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnDos"
         app:layout_constraintHorizontal_bias="0.0"
@@ -65,14 +67,14 @@
 
     <TextView
         android:id="@+id/textViewTres"
-        android:layout_width="253dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="343dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="20dp"
         android:text="Domiciliario : "
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.197"
+        app:layout_constraintHorizontal_bias="0.514"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
