--- a/app/src/main/res/layout/activity_nuevo_domicilio.xml
+++ b/app/src/main/res/layout/activity_nuevo_domicilio.xml
@@ -72,7 +72,7 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/button3"
+                    android:id="@+id/btnNuDoUno"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="20dp"
@@ -81,7 +81,7 @@
                     android:text="Nuevo" />
 
                 <Button
-                    android:id="@+id/button4"
+                    android:id="@+id/btnNuDoDos"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="20dp"
@@ -159,7 +159,7 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/button2"
+                    android:id="@+id/btnNuDoTres"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="30dp"
@@ -168,7 +168,7 @@
                     android:text="Registrar" />
 
                 <Button
-                    android:id="@+id/button"
+                    android:id="@+id/btnNuDoCuatro"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="30dp"
