--- a/app/src/main/res/layout/activity_nuevo_cliente.xml
+++ b/app/src/main/res/layout/activity_nuevo_cliente.xml
@@ -96,6 +96,18 @@
                 android:inputType="textPersonName" />
 
             <EditText
+                android:id="@+id/edtNuClSeis"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginBottom="20dp"
+                android:ems="10"
+                android:hint="Nit"
+                android:inputType="number" />
+
+            <EditText
                 android:id="@+id/editTextTextPersonName7"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
