--- a/app/src/main/res/layout/activity_nuevo_cliente.xml
+++ b/app/src/main/res/layout/activity_nuevo_cliente.xml
@@ -108,7 +108,7 @@
                 android:inputType="number" />
 
             <EditText
-                android:id="@+id/editTextTextPersonName7"
+                android:id="@+id/edtNuClSiete"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="30dp"
@@ -120,7 +120,7 @@
                 android:inputType="textPersonName" />
 
             <EditText
-                android:id="@+id/editTextTextPersonName8"
+                android:id="@+id/edtNuClOcho"
                 android:layout_width="match_parent"
                 android:layout_height="119dp"
                 android:layout_marginLeft="30dp"
@@ -133,7 +133,7 @@
                 android:inputType="textMultiLine" />
 
             <EditText
-                android:id="@+id/editTextTextPersonName9"
+                android:id="@+id/edtNuClNueve"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="30dp"
@@ -150,7 +150,7 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/button6"
+                    android:id="@+id/btnNuClUno"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="30dp"
@@ -159,7 +159,7 @@
                     android:text="Registrar" />
 
                 <Button
-                    android:id="@+id/button5"
+                    android:id="@+id/btnNuClDos"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="30dp"
