--- a/app/src/main/res/layout/activity_get_cliente.xml
+++ b/app/src/main/res/layout/activity_get_cliente.xml
@@ -18,6 +18,7 @@
         android:textStyle="bold" />
 
     <SearchView
+        android:id="@+id/schGetClUno"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:weightSum="1">
